fix(rest-connector): Fix url encoding to handle edge cases correctly